# fuel_game

./: .gitignore  CLAUDE.md  README.md  TECHNICAL_SPEC.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml  railway.json  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 2f9ba9f3c905_create_sessions_table.py  31a8bcbab8cf_add_fuel_sales_table_and_station_fuel_.py  52c04a07aa04_create_game_events_table.py  62c4d2167c69_create_refinery_fuels_fuel_orders_and_.py  9116e30d444b_create_vehicles_table.py  (+6 more)
backend/app/: main.py
backend/data/: mari_el_roads.geojson  mari_el_stations.geojson
backend/migrations/: env.py
backend/scripts/: build_road_graph.py  import_osm.py  release.py  seed_game_data.py
backend/tests/: conftest.py  test_accidents.py  test_accidents_api.py  test_auth.py  test_economic_tick.py  test_economy.py  test_event_modifiers_integration.py  test_event_service.py  test_events_api.py  test_events_scheduler.py  test_fuel_order_service.py  test_fuel_orders_api.py  test_game_lifecycle.py  test_games.py  test_health.py  test_map_api.py  test_map_import.py  test_network.py  test_password_reset.py  test_prices_api.py  test_refinery_service.py  test_routing_service.py  test_security.py  test_station_service.py  test_station_upgrade_service.py  test_station_upgrades_api.py  test_station_upgrades_tick.py  test_stations_api.py  test_trade_service.py  test_trades_api.py  test_trades_scheduler.py  test_traffic.py  test_traffic_lights.py  test_transactions_api.py  test_trucks.py  test_vehicles.py  test_vehicles_api.py
(+166 files in other folders)
